--- a/index.html
+++ b/index.html
@@ -52,5 +52,7 @@
     <footer>
       <p>© 2023 Caleb Heyliger. All Rights Reserved.</p>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
+
